alla kommandon funkar men fixa till klotter i kommandopanelen och dubbelchecka mer.